# herbert

./: .gitignore  README.md  pyproject.toml
config/: herbert.example.toml
docs/brainstorms/: 2026-04-18-herbert-requirements.md  2026-04-19-herbert-memory-requirements.md
docs/plans/: 2026-04-18-001-feat-herbert-v1-implementation-plan.md  2026-04-19-001-feat-herbert-persistent-memory-v1-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: boot.js  diagnostic.js  herbert-character.js  latency.js  main.js  state.js  transcript.js  ws.js
scripts/: build-frontend.sh  demo-stt.py  demo-voice.py  fetch-models.py
src/herbert/: __init__.py  __main__.py  boot_snapshot.py  cli.py  config.py  daemon.py  errors.py  events.py  health.py  logging.py  persona.py  secrets.py  session.py  state.py  turn.py
src/herbert/audio/: __init__.py  capture.py  devices.py  playback.py
src/herbert/diagnostic/: __init__.py  triggers.py
src/herbert/hal/: __init__.py  mac.py  mock.py
src/herbert/llm/: __init__.py  claude.py  local_tools.py  mcp_passthrough.py  tools.py
src/herbert/memory/: __init__.py  db.py  extractor.py  prompt.py  store.py
src/herbert/stt/: __init__.py  whisper_cpp.py
src/herbert/tts/: __init__.py  elevenlabs_stream.py  piper.py
src/herbert/web/: __init__.py  (+4 more)
tests/: conftest.py
tests/e2e/: conftest.py  invariants.py  replay_transport.py  test_api_5xx_recovery.py  test_api_auth_terminal.py  test_barge_in_during_speaking.py  test_barge_in_session_consistency.py  test_diagnostic_trigger.py  test_empty_utterance.py  test_happy_path.py  test_long_response.py  test_memory_across_sessions.py  test_multi_sentence.py  test_wifi_drop_recovery.py
tests/integration/: test_daemon_pipeline.py  test_latency_and_recovery.py  test_llm_live.py  test_memory_pipeline.py  test_stt_fixture.py  test_tts_elevenlabs_live.py  test_web_app.py  test_web_server_thread.py
tests/unit/: test_audio_devices.py  test_boot_snapshot.py  test_broadcaster.py  test_config.py  test_errors.py  test_events.py  test_hal_mock.py  test_health.py  test_llm_claude.py  test_local_tools.py  test_logging_bus.py  test_mcp_passthrough.py  test_memory_db.py  test_memory_extractor.py  test_memory_prompt.py  test_memory_store.py  test_persona_reload.py  test_redaction.py  test_secrets.py  test_sentence_buffer.py  test_session.py  test_state_machine.py  test_stt_whisper.py  test_token_artifact_repair.py  test_tools.py  test_triggers.py  test_tts_elevenlabs.py  test_tts_piper.py  test_turn.py  test_web_auth.py
(+2 files in other folders)
