[project]
name = "herbert"
version = "0.1.0"
description = "A Claude-powered, voice-enabled AI assistant device"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Matt North", email = "matt.north@arccosgolf.com" }]
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.50",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "janus>=1.0",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "pydantic>=2.9",
    "tomli>=2.0; python_version < '3.11'",
    "python-dotenv>=1.0",
    "ulid-py>=1.1",
    "zeroconf>=0.134",
    "qrcode[pil]>=7.4",
    # STT / TTS
    "pywhispercpp>=1.3; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "piper-tts>=1.3; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "elevenlabs>=2.43",
    # Platform-specific
    "gpiozero>=2.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "lgpio>=0.2.2; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "pynput>=1.7; sys_platform == 'darwin'",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
herbert = "herbert.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/herbert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "live: tests that call real external APIs (skip by default)",
    "pi: tests that require real Pi hardware (skip by default)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
